--- a/Faster5/app/src/main/res/layout/layout_check_quit.xml
+++ b/Faster5/app/src/main/res/layout/layout_check_quit.xml
@@ -13,7 +13,6 @@
         android:background="@drawable/xml_popup_bg_white"
         android:orientation="vertical">
 
-
         <TextView
             android:id="@+id/noti"
             android:layout_width="wrap_content"
@@ -31,6 +30,7 @@
             android:textSize="22sp" />
 
         <FrameLayout
+            android:id="@+id/frame_layout_quit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -38,9 +38,10 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
+                android:layout_height="1dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginBottom="3dp"
+                android:layout_marginBottom="4dp"
+                android:alpha="0.85"
                 android:background="#00366D" />
 
             <Button
@@ -60,6 +61,7 @@
         </FrameLayout>
 
         <FrameLayout
+            android:id="@+id/frame_layout_continue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -68,9 +70,10 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
+                android:layout_height="1dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginBottom="3dp"
+                android:layout_marginBottom="4dp"
+                android:alpha="0.85"
                 android:background="#00366D" />
 
             <Button
@@ -89,6 +92,11 @@
                 android:textStyle="bold" />
         </FrameLayout>
 
-
+        <ImageView
+            android:id="@+id/imgView_loading"
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp" />
     </LinearLayout>
 </RelativeLayout>
