--- a/Faster5/app/src/main/res/layout/game_over.xml
+++ b/Faster5/app/src/main/res/layout/game_over.xml
@@ -32,6 +32,7 @@
 
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/imageview_useravatarwin"
+            android:layout_alignLeft="@+id/textview_money_win"
             android:layout_width="50dp"
             android:layout_height="60dp"
             android:src="@drawable/avatar"
