--- a/Faster5/app/src/main/res/layout/layout_popup_connection.xml
+++ b/Faster5/app/src/main/res/layout/layout_popup_connection.xml
@@ -31,9 +31,10 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
+                android:layout_height="1dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginBottom="3dp"
+                android:layout_marginBottom="4dp"
+                android:alpha="0.85"
                 android:background="#00366D" />
 
             <Button
