--- a/Faster5/app/src/main/res/layout/play_screen.xml
+++ b/Faster5/app/src/main/res/layout/play_screen.xml
@@ -176,7 +176,8 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_centerInParent="true"
-            android:background="@drawable/save2" />
+            android:background="@drawable/save2"
+            android:onClick="audience"/>
 
         <Button
             android:id="@+id/button_save3"
@@ -184,7 +185,8 @@
             android:layout_height="50dp"
             android:layout_marginLeft="20dp"
             android:layout_toRightOf="@+id/button_save2"
-            android:background="@drawable/save3" />
+            android:background="@drawable/save3"
+            android:onClick="showAnsRight"/>
 
     </RelativeLayout>
 
