--- a/Faster5/app/src/main/res/layout/layout_answer_button.xml
+++ b/Faster5/app/src/main/res/layout/layout_answer_button.xml
@@ -26,15 +26,16 @@
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/answer0"
-                android:gravity="left|center_vertical"
+                android:gravity="start|center_vertical"
                 android:onClick="btnAnswerClick"
                 android:paddingBottom="10dp"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
                 android:singleLine="true"
-                android:text="A: 1Kien"
+                android:text="@string/answ_A"
                 android:textAllCaps="false"
                 android:textColor="#FFF"
                 android:textSize="18sp" />
@@ -44,15 +45,16 @@
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/answer0"
-                android:gravity="left|center_vertical"
+                android:gravity="start|center_vertical"
                 android:onClick="btnAnswerClick"
                 android:paddingBottom="10dp"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
                 android:singleLine="true"
-                android:text="B: 2"
+                android:text="@string/answ_B"
                 android:textAllCaps="false"
                 android:textColor="#FFF"
                 android:textSize="18sp" />
@@ -82,15 +84,16 @@
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/answer0"
-                android:gravity="left|center_vertical"
+                android:gravity="start|center_vertical"
                 android:onClick="btnAnswerClick"
                 android:paddingBottom="10dp"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
                 android:singleLine="true"
-                android:text="C: 3 hel2222222l2222222o"
+                android:text="@string/answ_C"
                 android:textAllCaps="false"
                 android:textColor="#FFF"
                 android:textSize="18sp" />
@@ -100,15 +103,16 @@
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/answer0"
-                android:gravity="left|center_vertical"
+                android:gravity="start|center_vertical"
                 android:onClick="btnAnswerClick"
                 android:paddingBottom="10dp"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
                 android:singleLine="true"
-                android:text="D: 4"
+                android:text="@string/answ_D"
                 android:textAllCaps="false"
                 android:textColor="#FFF"
                 android:textSize="18sp" />
