--- a/Faster5/app/src/main/res/layout/login_screen.xml
+++ b/Faster5/app/src/main/res/layout/login_screen.xml
@@ -89,8 +89,6 @@
             android:id="@+id/text_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/imageview_name"
-            android:layout_alignRight="@+id/imageview_name"
             android:layout_marginTop="17dp"
             android:background="@android:color/transparent"
             android:duplicateParentState="true"
@@ -99,7 +97,7 @@
             android:focusableInTouchMode="false"
             android:foregroundGravity="left"
             android:gravity="center"
-            android:hint="Choose username"
+            android:hint="@string/hint_edittex_login"
             android:inputType="none"
             android:maxLength="16"
             android:maxLines="1"
@@ -133,7 +131,7 @@
             android:layout_marginTop="5dp"
             android:background="@drawable/answer0"
             android:paddingBottom="10dp"
-            android:text="VIETNAM"
+            android:text="@string/city"
             android:textColor="#ffffff"
             android:textSize="20sp" />
 
@@ -164,7 +162,7 @@
             android:layout_marginTop="5dp"
             android:background="@drawable/answer0"
             android:paddingBottom="7dp"
-            android:text="Đăng nhập"
+            android:text="@string/btnLogin"
             android:textAllCaps="false"
             android:textColor="#ffffff"
             android:textSize="15sp"
