--- a/Faster5/app/src/main/res/layout/layout_avatar_popup.xml
+++ b/Faster5/app/src/main/res/layout/layout_avatar_popup.xml
@@ -18,15 +18,15 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:text="Đặt avatar"
+            android:text="@string/set_Avatar"
             android:textColor="#00366D"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            android:ellipsize="end"
+            android:lines="1"/>
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
+            android:layout_height="3dp"
             android:layout_marginTop="10dp"
             android:background="#00366D" />
 
@@ -36,100 +36,57 @@
             android:layout_gravity="center"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="30dp"
             android:gravity="center"
-            android:maxLines="3"
-            android:text="Bạn muốn chọn ảnh đại diện cho mình luôn chứ?"
-            android:textColor="#00366D"
-            android:textSize="24sp" />
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="30dp">
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginBottom="4dp"
-                android:alpha="0.85"
-                android:background="#00366D" />
-
-            <Button
-                android:id="@+id/button_camera"
-                android:layout_width="250dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
-                android:background="@drawable/answer0"
-                android:paddingBottom="10dp"
-                android:text="Từ Camera"
-                android:textAllCaps="false"
-                android:textColor="#ffffff"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-        </FrameLayout>
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="5dp">
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginBottom="4dp"
-                android:alpha="0.85"
-                android:background="#00366D" />
-
-            <Button
-                android:id="@+id/button_gallery"
-                android:layout_width="250dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
-                android:background="@drawable/answer0"
-                android:clickable="true"
-                android:paddingBottom="10dp"
-                android:text="Từ bộ sưu tập"
-                android:textAllCaps="false"
-                android:textColor="#ffffff"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+            android:maxLines="2"
+            android:text="@string/question_Avatar"
+            android:textColor="#EEA542"
+            android:textSize="18sp"
+            android:layout_marginBottom="20dp"/>
 
 
-        </FrameLayout>
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="5dp">
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginBottom="4dp"
-                android:alpha="0.85"
-                android:background="#00366D" />
-
-            <Button
-                android:id="@+id/button_later"
-                android:layout_width="250dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:background="@drawable/btn_later" />
+        <Button
+            android:id="@+id/button_camera"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:background="@drawable/answer0"
+            android:paddingBottom="10dp"
+            android:text="@string/avatar_from_camera"
+            android:textAllCaps="false"
+            android:textColor="#ffffff"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="10dp"/>
 
 
-        </FrameLayout>
+        <Button
+            android:id="@+id/button_gallery"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:background="@drawable/answer0"
+            android:clickable="true"
+            android:paddingBottom="10dp"
+            android:text="@string/avatar_from_gallery"
+            android:textAllCaps="false"
+            android:textColor="#ffffff"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="10dp"/>
+
+
+        <Button
+            android:id="@+id/button_later"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:background="@drawable/btn_later"
+            android:layout_marginBottom="10dp"/>
 
 
     </LinearLayout>
