--- a/Faster5/app/src/main/res/layout/layout_edittex_popup.xml
+++ b/Faster5/app/src/main/res/layout/layout_edittex_popup.xml
@@ -18,15 +18,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:text="Lỗi"
+            android:text="@string/title_edittex_popup"
             android:textColor="#00366D"
             android:textSize="30sp" />
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
+            android:layout_height="3dp"
             android:layout_marginTop="10dp"
             android:background="#00366D" />
 
@@ -34,49 +32,34 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="30dp"
             android:gravity="center"
-            android:maxLines="3"
+            android:maxLines="2"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:text="Tên đăng nhập \n phải lớn hơn 3 ký tự"
-            android:textColor="#00366D"
+            android:text="@string/noti_edittex_popup"
+            android:textColor="#EEA542"
             android:textSize="20sp" />
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+
+        <Button
+            android:id="@+id/button_okay"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
             android:layout_marginBottom="20dp"
-            android:layout_marginTop="30dp">
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginBottom="4dp"
-                android:alpha="0.85"
-                android:background="#00366D" />
-
-            <Button
-                android:id="@+id/button_okay"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="80dp"
-                android:layout_marginRight="80dp"
-                android:background="@drawable/answer0"
-                android:paddingBottom="10dp"
-                android:text="Đồng ý"
-                android:textAllCaps="false"
-                android:textColor="#ffffff"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-
-        </FrameLayout>
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:background="@drawable/answer0"
+            android:paddingBottom="10dp"
+            android:text="@string/btnYes_quit_popup"
+            android:textAllCaps="false"
+            android:textColor="#ffffff"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
 
     </LinearLayout>
