--- a/Faster5/app/src/main/res/layout/layout_popup_rule.xml
+++ b/Faster5/app/src/main/res/layout/layout_popup_rule.xml
@@ -26,7 +26,9 @@
             android:layout_gravity="center_horizontal|center_vertical"
             android:background="@drawable/answer_wrong"
             android:paddingBottom="8dp"
-            android:text="Bỏ Qua"
+            android:text="@string/skip_text"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
             android:textColor="#fff"
             android:textStyle="bold" />
 
