--- a/Faster5/app/src/main/res/values/colors.xml
+++ b/Faster5/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="black">#000000</color>
+    <color name="RED">#ff0000</color>
     <color name="ALTP">#00366D</color>
 </resources>
