--- a/Faster5/app/src/main/res/layout/activity_main.xml
+++ b/Faster5/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/xml_bg"
+    android:orientation="vertical"
     tools:context="com.oic.game.ailatrieuphu.ui.activity.MainActivity">
 
+    <ImageView
+        android:id="@+id/imageview_altp"
+        android:layout_width="320dp"
+        android:layout_height="55dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:src="@drawable/altp"/>
+
+    <ImageView
+        android:id="@+id/imageview_online"
+        android:layout_width="65dp"
+        android:layout_height="30dp"
+        android:layout_alignEnd="@+id/imageview_altp"
+        android:layout_alignRight="@+id/imageview_altp"
+        android:layout_below="@+id/imageview_altp"
+        android:src="@drawable/online"/>
+
+    <TextView
+        android:id="@+id/textview_loading"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingBottom="30dp"
+        android:paddingTop="30dp"
+        android:singleLine="true"
+        android:text="80%"
+        android:layout_below="@id/imageview_online"
+        android:textColor="#FFF"
+        android:textSize="36sp"
+        android:textStyle="bold"/>
+
+    <com.oicmap.game.multiparalaxview.ParallaxView
+        android:id="@+id/parallax"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/textview_loading"
+        />
 </RelativeLayout>
