--- a/Faster5/app/src/main/res/layout/game_over.xml
+++ b/Faster5/app/src/main/res/layout/game_over.xml
@@ -3,7 +3,7 @@
     android:id="@+id/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/xml_bg"
     android:orientation="vertical">
 
     <ImageView
