--- a/Faster5/app/src/main/res/layout/play_screen.xml
+++ b/Faster5/app/src/main/res/layout/play_screen.xml
@@ -4,7 +4,7 @@
     android:id="@+id/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/xml_bg"
     android:orientation="vertical"
     tools:context="com.oic.game.ailatrieuphu.ui.activity.MainActivity">
 
